Closed Bug 1846347 Opened 1 year ago Closed 1 year ago

Tab syncing broken on Nightlies

Categories

(Firefox :: Sync, defect)

defect

Tracking

()

VERIFIED FIXED
118 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox116 --- unaffected
firefox117 + verified
firefox118 + verified

People

(Reporter: markh, Assigned: markh)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

No tabs will be uploaded from Nightlies since bug 1840044 landed. That bug is only indirectly responsible though - it's the new application-services which caused the regression. The fix will be another update to app-services.

Pushed by mhammond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ea7df1f8976b update application-services to fix tab syncing. r=skhamis
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch

The patch landed in nightly and beta is affected.
:markh, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox117 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(markh)

Comment on attachment 9346568 [details]
Bug 1846347 - update application-services to fix tab syncing. r?skhamis

Beta/Release Uplift Approval Request

  • User impact if declined: Tab syncing is broken
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Limited to tab syncing
  • String changes made/needed: None
  • Is Android affected?: No
Flags: needinfo?(markh)
Attachment #9346568 - Flags: approval-mozilla-beta?

Comment on attachment 9346568 [details]
Bug 1846347 - update application-services to fix tab syncing. r?skhamis

Approved for 117.0b3.

Attachment #9346568 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]
Attached image sync issue.png

Hello,
We have tried to reproduce this issue on Nightly 117.0a1 (2023-07-30).
We have logged with the same FxA account on 2 different nightly profiles.
On the first profile the tabs opened on the second profile are displayed in the Sidebar > Synced tabs option. On the second profile the tabs opened on the first profile are not displayed in the Sidebar > Synced tabs option.

Could you please let us know if this was the initial issue?

Thank you!

Flags: needinfo?(markh)

Hello,

We have investigated more today and figured out the behavior on affected Nightly (117.0a1 (2023-07-30)) and beta (117.0b2 ) builds.
The issue is verified as fixed using latest Nightly build 118.0a1 (2023-08-10) and on Beta 117.0b3 the tab syncing is now working.

Status: RESOLVED → VERIFIED
Flags: needinfo?(markh)
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: