Bug 1846347 - update application-services to fix tab syncing. r=skhamis

Differential Revision: https://phabricator.services.mozilla.com/D184986